# cryptomentor-bot

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .replit  .tmp_intro_nginx.conf  .tmp_openapi.json  .tmp_openapi_after_restart.json  BOT_STATUS.txt  CHANGELOG.md  COMPLETE_SYSTEM_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_FRONTEND_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUCCESS_STACKMENTOR.md  DEPLOY_LICENSE_TEST_TO_VPS.md  DEPLOY_TO_VPS_GUIDE.md  DEPLOY_VERIFICATION_FILE.bat  FIX_ENGINE_AUTO_INACTIVE.md  FULL_AUTOMATION_COMPLETE.md  MIDDLEWARE_DEPLOYMENT_CHECKLIST.md  MIGRATION_DEPLOYMENT_SUMMARY.py  README.md  RUN_GATEWAY_TEST.bat  START_HERE_GATEWAY_TEST.md  VPS_COMMANDS_TEST_LICENSE.txt  VPS_DEPLOYMENT_INSTRUCTIONS.md  X_AUTO_POSTER_DONE.md  activate_test_license.py  agents.md  aggressive_cleanup.py  ai_assistant.py  auto_deploy_license.sh  binance_provider.py  bot.py  check_6_users.py  check_migration_status.py  check_status.py  check_status_final.py  check_vps_status.py  (+50 more)
.claude/: launch.json  (+1 more)
smc_trading_engine/: .env.example  README.md  pyproject.toml  requirements.txt
smc_trading_engine/app/: main.py  runner.py
smc_trading_engine/app/api/: routes_admin.py  routes_health.py  routes_pairs.py  routes_status.py  routes_trades.py
smc_trading_engine/scripts/: bootstrap_local.sh  run_dev.sh  seed_demo_data.py
smc_trading_engine/tests/: conftest.py  test_bitunix_client.py  test_confidence.py  test_decision_engine.py  test_entry_zone.py  test_exits.py  test_liquidity.py  test_market_state.py  test_scan_service.py  test_structure.py
(+503 files in other folders)
