[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.0.0",
    "aiosqlite>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
]
