[project]
name = "smc-trading-engine"
version = "0.1.0"
description = "Deterministic SMC decision engine with FastAPI analytics surfaces"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
